test/implicitDup21_4.slq
def foo(x:ğ”¹){
	y:=dup(x);
	z:=y; /// error
	r:=z;
	if X(z){ /// error
		return x;
	}else{
		forget(y); /// error
	}
	return (r,x);
}

